@@ -1,6 +1,9 @@
 # Revision history for Perl extension Encode.
 #
 # $Id: Changes,v 2.38 2009/11/16 14:08:13 dankogai Exp dankogai $
+! Encode.xs t/fallback.t
+  $utf8 = decode('utf8', $malformed, sub{ ... }) # now works!
+  http://rt.cpan.org/Ticket/Display.html?id=51204
 ! t/CJKT.t t/guess.t t/perlio.t
   $ENV{'PERL_CORE'} tricks removed since they are no longer necessary.
   Message-Id: <20091116161513.GA25556@bestpractical.com>
